--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-* > * {
-  font-family: "VT323", monospace;
+@layer components {
+  .sidebar-icon {
+    @apply relative mx-auto my-2 flex h-12 w-12 cursor-pointer items-center  justify-center rounded-3xl bg-slate-600 text-white transition-all duration-300 ease-linear hover:rounded-xl hover:bg-gray-900 hover:text-white;
+  }
+
+  .sidebar-tooltip {
+    @apply absolute left-14 m-2 w-auto min-w-max origin-left scale-0 rounded-md bg-gray-900 p-2 text-xs font-bold text-white shadow-md transition-all duration-100;
+  }
 }
